--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,20 @@
-texto lala
+<!doctype html>
+<title>{% block title %}{% endblock title %} - Mailer</title>
+<link rel="stylesheet" href={{ url_for('static', filename='style.css') }}
 
-{% block content %}{% endblock content %}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+
+<nav>
+    Mail<b>er</b>
+</nav>
+<section class='content'>
+    <div class='top-bar'>
+        <form method='get'>
+            <input name='search' type='text' placeholder='¿Quieres buscar algo?' />
+        </form>
+    </div>
+    {% block content %}{% endblock content %}
+</section>
