--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,5 +16,11 @@
             <input name='search' type='text' placeholder='¿Quieres buscar algo?' />
         </form>
     </div>
+    <header>
+        {% block header %}{% endblock header %}
+    </header>
+    {% for message in get_flashed_messages() %}
+        <div class="flash"> {{ message }} </div>
+    {% endfor %}
     {% block content %}{% endblock content %}
 </section>
