MAILER: Crear botón navegación, base: block actions para el link, index: link

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
         <form method='get'>
             <input name='search' type='text' placeholder='¿Quieres buscar algo?' />
         </form>
+        {% block actions %}{% endblock actions %}
     </div>
     <header>
         {% block header %}{% endblock header %}
