--- a/app/static/style.css
+++ b/app/static/style.css
@@ -33,6 +33,11 @@ nav {
     margin-right: 20px;
 }
 
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
 form input {
     font-family: "Raleway", sans-serif;
     border: 0;
@@ -68,6 +73,21 @@ ul {
 .mail-content {
     margin: 5px 0 0 0;
     color: #aaa;
+}
+
+.button {
+    font-size: 14px;
+    transition: background-color 0.5s ease;
+    background-color: #674dd4;
+    color: #fff;
+    align-self: center;
+    padding: 10px 15px;
+    border-radius: 30px;
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: #7b62e3;
 }
 
 hr {
