--- a/app/templates/mails/index.html
+++ b/app/templates/mails/index.html
@@ -6,7 +6,7 @@
 
 
 {% block actions %}
-    <a class="button" href='#'>Nuevo correo</a>
+    <a class="button" href='{{ url_for('mail.create') }}'>Nuevo correo</a>
 {% endblock actions %}
 
 {% block content %}
