--- a/app/static/style.css
+++ b/app/static/style.css
@@ -84,6 +84,7 @@ ul {
     padding: 10px 15px;
     border-radius: 30px;
     text-decoration: none;
+    border: none;
 }
 
 .button:hover {
@@ -94,4 +95,27 @@ hr {
     border: none;
     height: 1px;
     background-color: #eee;
+}
+
+textarea {
+    font-family: "Raleway", sans-serif;
+    border: 0;
+    height: 250px;
+    padding: 10px 15px;
+    border-radius: 30px;
+    box-shadow: 0 1px 5px #bbb;
+    resize: none;
+    width: 450px;
+    display: block;
+    outline: none;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+form label {
+    display: inline-block;
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
